--- a/css/main.css
+++ b/css/main.css
@@ -3,6 +3,19 @@
     margin: 0;
     font-family: 'Courgette', cursive;
 }
+.dark{
+    background-image: url(../images/night.jpeg);
+    background-attachment: fixed;
+    background-size: cover;
+}
+ .nightsea {
+    height: 240px;
+    background-image: url(../images/nightsea.jpeg);
+    background-size: 100% 100%;
+    position: absolute;
+    bottom: 0;
+
+}
 
 body {
     background-image: url(../images/Picture1.jpg);
@@ -63,6 +76,7 @@ body {
 .navbar .navbar-brand {
     color: deepskyblue;
     font-size: 30px;
+    cursor: pointer;
 }
 
 .navbar .nav-item .dropdown-menu {
@@ -2304,6 +2318,32 @@ footer .copy p a:hover {
             top: 90px;
         }
 
+    }
+    .swimhero .hero .caption h1 {
+        margin-top: 100px;
+        font-size: 30px;
+        color: white;
+        text-align: center;
+    }
+    
+    .swimhero .hero .caption #p1 {
+        color: black;
+        text-align: center;
+        width: 50%;
+        margin: auto;
+        margin-top: 20px;
+        position: relative;
+        top: 600px;
+        border-radius: 15px;
+        background-color: white;
+        transition: all 3s;
+    }
+    .swimhero .hero .caption #p2 {
+        text-align: center;
+        margin: 10px 20px;
+        color: white;
+        font-size: 15px;
+    
     }
 
 
